[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/test/camera_system_test.gd" type="Script" id=1]

[node name="CameraSystemTest" type="Node2D"]
script = ExtResource( 1 )

[node name="TestEnvironment" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="TestEnvironment"]
centered = false

[node name="Camera" type="Camera2D" parent="TestEnvironment"]
position = Vector2( 640, 480 )
current = true

[node name="Player" type="KinematicBody2D" parent="TestEnvironment"]
position = Vector2( 400, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnvironment/Player"]

[node name="Sprite" type="Sprite" parent="TestEnvironment/Player"]

[node name="TestObjects" type="Node2D" parent="TestEnvironment"]

[node name="WalkableAreas" type="Node2D" parent="TestEnvironment"]

[node name="UI" type="CanvasLayer" parent="."]
layer = 100

[node name="ControlPanel" type="TabContainer" parent="UI"]
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
tab_align = 0

[node name="MovementPanel" type="ScrollContainer" parent="UI/ControlPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CoordinatePanel" type="ScrollContainer" parent="UI/ControlPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="StatePanel" type="ScrollContainer" parent="UI/ControlPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BoundsPanel" type="ScrollContainer" parent="UI/ControlPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScalingPanel" type="ScrollContainer" parent="UI/ControlPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="OutputDisplay" type="RichTextLabel" parent="UI"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
bbcode_enabled = true
scroll_following = true